# take_break

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TakeBreak.spec  icon.py  install.bat  main.py  pyproject.toml  take_break.spec
.github/workflows/: ci.yml  release.yml
src/: app.py
src/config/: __init__.py  logger.py  logging.py  settings.py  texts.py
src/constants/: path.py  settings.py  url.py
src/db/: __init__.py  db.py
src/schemas/: __init__.py  settings.py
src/services/: __init__.py  autostart.py  position.py  settings_storage.py  timer.py  wallpaper.py
src/services/wallpaper/: __init__.py  wallpaper.py
src/services/wallpaper/getter/: __init__.py  base.py  local.py  picsum.py
src/utils/: time.py
src/widgets/: __init__.py  background.py  overlay.py  styles.py  timer.py  tray.py  welcome.py
take_break/: __init__.py  __main__.py  app.py  blocker.py  overlay.py  timer_widget.py
tests/: conftest.py  test_app.py  test_blocker.py
tests/config/: __init__.py  test_texts.py
tests/constants/: __init__.py  test_path.py
tests/services/: __init__.py  test_autostart.py  test_database.py  test_position.py  test_settings_storage.py  test_timer.py  test_wallpaper.py
tests/utils/: test_time.py
tests/widgets/: test_background.py  test_overlay.py  test_timer.py  test_welcome.py
